Dear Mory Final Done

--- a/app/src/main/res/layout/activity_reminder.xml
+++ b/app/src/main/res/layout/activity_reminder.xml
@@ -146,15 +146,13 @@
             android:gravity="center"
             android:clickable="true"
             android:focusable="true"
-            android:layout_marginTop="20dp"
-            android:visibility="gone">
+            android:layout_marginTop="20dp">
 
             <TextView
                 android:id="@+id/su_day"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
-                android:layout_margin="3dp"
                 android:background="@drawable/ico_day_picker_non_active"
                 android:gravity="center"
                 android:text="@string/day_of_week_su"
@@ -165,7 +163,6 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
-                android:layout_margin="3dp"
                 android:background="@drawable/ico_day_picker_non_active"
                 android:gravity="center"
                 android:text="@string/day_of_week_mo"
@@ -176,7 +173,6 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
-                android:layout_margin="3dp"
                 android:background="@drawable/ico_day_picker_non_active"
                 android:gravity="center"
                 android:text="@string/day_of_week_tu"
@@ -187,7 +183,6 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
-                android:layout_margin="3dp"
                 android:background="@drawable/ico_day_picker_non_active"
                 android:gravity="center"
                 android:text="@string/day_of_week_we"
@@ -198,7 +193,6 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
-                android:layout_margin="3dp"
                 android:background="@drawable/ico_day_picker_non_active"
                 android:gravity="center"
                 android:text="@string/day_of_week_th"
@@ -209,7 +203,6 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
-                android:layout_margin="3dp"
                 android:background="@drawable/ico_day_picker_non_active"
                 android:gravity="center"
                 android:text="@string/day_of_week_fr"
@@ -220,7 +213,6 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
-                android:layout_margin="3dp"
                 android:background="@drawable/ico_day_picker_non_active"
                 android:gravity="center"
                 android:text="@string/day_of_week_sa"
